--- a/www/index.html
+++ b/www/index.html
@@ -45,7 +45,7 @@
           </div>
         </div>  
 
-        <div class="loadingIndicator" ng-show="loading > 0"><i class="ion-loading-c"></i></div>
+        <div class="loadingIndicator" ng-show="loading > 0"><img src="img/499.GIF"></div>
 
         <ion-slide-box on-slide-changed="slideHasChanged($index)" show-pager="false" active-slide="activeSlide">
           <ion-slide ng-repeat="feedingDay in feedings.slice(0,7) track by $index">
