--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@
     <!-- Center content -->
     <ion-side-menu-content>
       <ion-content id="CounterApp" ng-controller="CounterCtrl">
-        <ion-refresher pulling-text="Pull to resync today..." on-refresh="resyncToday()"></ion-refresher>
+<!--         <ion-refresher pulling-text="Pull to resync today..." on-refresh="resyncToday()"></ion-refresher> -->
         <div class="counter">
           <button menu-toggle="left" class="button button-icon icon ion-navicon button-menu"></button>
           <div class="ongoing">
