--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@
     <!-- Center content -->
     <ion-side-menu-content>
       <ion-content id="CounterApp" ng-controller="CounterCtrl">
-<!--         <ion-refresher pulling-text="Pull to resync today..." on-refresh="resyncToday()"></ion-refresher> -->
+
         <div class="counter">
           <button menu-toggle="left" class="button button-icon icon ion-navicon button-menu"></button>
           <div class="ongoing">
@@ -78,10 +78,10 @@
           </div>
 
           <div class="tools">
+            <ion-item ng-click="resyncToday()"    class="noicon">Resync</ion-item>
             <ion-item ng-click="connectDevices()" class="noicon">Connect devices</ion-item>
             <ion-item ng-click="exitApp()"        class="noicon">Exit</ion-item>
           </div>
-
         </ion-list>
       </ion-content>
     </ion-side-menu>
