--- a/www/editFeeding.html
+++ b/www/editFeeding.html
@@ -9,12 +9,12 @@
   <div class="newFeedingVolume" ng-show="editedFeedingModel.supplier === 'B'">
     <div class="header">Volume</div>
     <div>{{editedFeedingModel.volume}}0 ml</div>
-    <input type="range" min="0" max="30" value="{{editedFeedingModel.volume}}" ng-model="editedFeedingModel.volume">
+    <div class="range"><input type="range" min="0" max="30" value="{{editedFeedingModel.volume}}" ng-model="editedFeedingModel.volume"></div>
   </div>
   <div class="newFeedingDuration" ng-show="editedFeedingModel.supplier !== 'B'">
     <div class="header">Duration</div>
     <div>{{editedFeedingModel.duration}} min</div>
-    <input type="range" min="0" max="30" value="{{editedFeedingModel.duration}}" ng-model="editedFeedingModel.duration">
+    <div class="range"><input type="range" min="0" max="30" value="{{editedFeedingModel.duration}}" ng-model="editedFeedingModel.duration"></div>
   </div>
 
   <button class="button button-block button-round" ng-click="deleteEditedFeeding()">Delete</button>
