--- a/www/newBottleFeeding.html
+++ b/www/newBottleFeeding.html
@@ -1,4 +1,6 @@
 <div class="newFeedingDuration">
   <div>{{bottleFeedingModel.volume}}0ml</div>
-  <input type="range" min="0" max="30" value="{{bottleFeedingModel.volume}}" ng-model="bottleFeedingModel.volume">
+  <div class="range">
+    <input type="range" min="0" max="30" value="{{bottleFeedingModel.volume}}" ng-model="bottleFeedingModel.volume">
+  </div>
 </div>
