--- a/www/index.html
+++ b/www/index.html
@@ -72,6 +72,7 @@
     <ion-side-menu side="left">
       <ion-content ng-controller="MenuCtrl" class="sidemenu">
         <ion-list>
+          <div class="version">v{{version}}</div>
           <div class="settings">
             <ion-item ng-click="toggleDemoMode()" class="item item-icon-right">Demo mode<i ng-show="demoModeOn" class="icon ion-toggle-filled"></i><i ng-show="!demoModeOn" class="icon ion-toggle"></i></ion-item>
             <ion-item ng-click="toggleVibrate()"  class="item item-icon-right">Buzz every 5 min<i ng-show="vibrateOn" class="icon ion-toggle-filled"></i><i ng-show="!vibrateOn" class="icon ion-toggle"></i></ion-item>
