Small design fixes

--- a/www/connectDevices.html
+++ b/www/connectDevices.html
@@ -4,14 +4,14 @@
   </ion-header-bar>
   <ion-content>
 
-    <p class="info">Use multiple devices. See all feeding info on your tablet, your partner's or your other devices.</p>
+    <p class="info">See and sync all feeding info between all your and your partner's Android devices.</p>
 
-    <button class="button button-round button-block" ng-click="share()">Add new device...</button>
+    <button class="button button-round button-block" ng-click="share()">Add new device</button>
     <p class="small">Devices are connected by sharing the same secret code.</p>
 
     <hr>
 
-    <button class="button button-round button-block" ng-click="enterCodePopup()">Enter code...</button>
+    <button class="button button-round button-block" ng-click="enterCodePopup()">Enter code</button>
     <p class="small">Your current code is {{userId()}}</p>
 
   </ion-content>
