--- a/www/index.html
+++ b/www/index.html
@@ -79,7 +79,7 @@
           </div>
 
           <div class="tools">
-            <ion-item ng-click="resyncToday()"    class="noicon">Resync</ion-item>
+            <ion-item ng-click="resyncToday()"    class="noicon">Refresh</ion-item>
             <ion-item ng-click="connectDevices()" class="noicon">Connect devices</ion-item>
             <ion-item ng-click="exitApp()"        class="noicon">Exit</ion-item>
           </div>
