Double modals opened on edit bottle click

--- a/www/list.html
+++ b/www/list.html
@@ -9,7 +9,7 @@
   <span class="row" ng-show="feeding.supplier === 'B'" ng-click="editFeeding(feeding)">
     <div class="verticalLine"></div>
     <span class="supplierContainer">
-      <span ng-click="editFeeding(feeding)" class="supplier supplier{{feeding.supplier}}"><i class="ion-waterdrop"></i></span>
+      <span class="supplier supplierB"><i class="ion-waterdrop"></i></span>
     </span>
     <span class="col"></span>
     <span class="col" ng-click="editFeeding(feeding)">
