Moved images off

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!--     <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" /> -->
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300|Roboto:300' rel='stylesheet' type='text/css'>
     
     <link rel="stylesheet" type="text/css" href="stylesheets/default.css" />
     <link rel='stylesheet' media='screen and (max-width: 801px)' href='stylesheets/narrow.css' />
@@ -27,18 +27,21 @@
           <a class="alpha button" href="http://goo.gl/e5WAkg">Download Alpha here</a>
         </header>
 
-        <section id="basics">
+        <section id="basics" class="odd">
+          <div class="img"></div>
           <h1>Beautifly simple</h1>
           <p>Ionic baby feeder tracks feedings in style emphesizing what's important - <strong>time since last</strong> feeding and <strong>duration</strong> of ongoing feeding.</p>
           <p>Swipe from day to day to see past feedings. Set a buzz to vibrate your phone every 5 minutes to keep track without looking at the phone.</p>
         </section>
 
-        <section id="sync">
+        <section id="sync" class="even">
+          <div class="img"></div>
           <h1>Syncs all your devices</h1>
           <p>Use Ionic Baby Feeder on your phone, your tablet, your partner's phone or any other Android device. They all sync.</p>
         </section>
 
-        <section id="nobloat">
+        <section id="nobloat" class="odd">
+          <div class="img"></div>
           <h1>No bloat</h1>
           <p><strong>No fees, no ads, no accounts, no email checks, no nothing.</strong> It's a God damn baby feeding app. Why would we need to know your shoe-size?</p>
         </section>
