Thanks and centered texts.

--- a/index.html
+++ b/index.html
@@ -29,32 +29,52 @@
 
         <section id="basics" class="odd">
           <div class="img"></div>
+          <div class="content">
           <h1>Beautifly simple</h1>
           <p>Ionic baby feeder tracks feedings in style emphesizing what's important - <strong>time since last</strong> feeding and <strong>duration</strong> of ongoing feeding.</p>
           <p>Swipe from day to day to see past feedings. Set a buzz to vibrate your phone every 5 minutes to keep track without looking at the phone.</p>
+          </div>
         </section>
 
         <section id="sync" class="even">
           <div class="img"></div>
+          <div class="content">
           <h1>Syncs all your devices</h1>
-          <p>Use Ionic Baby Feeder on your phone, your tablet, your partner's phone or any other Android device. They all sync.</p>
+          <p>Use Ionic Baby Feeder on your phone, your tablet, your partner's phone or <strong>any Android device</strong>. They all sync.</p>
+          </div>
         </section>
 
         <section id="nobloat" class="odd">
           <div class="img"></div>
+          <div class="content">
+
           <h1>No bloat</h1>
           <p><strong>No fees, no ads, no accounts, no email checks, no nothing.</strong> It's a God damn baby feeding app. Why would we need to know your shoe-size?</p>
+          </div>
         </section>
 
 
         <section id="opensource">
           <div class="left">
-            <h1>Somethine something</h1>
-            <p>Småkakor</p>
-          </div>
-          <div class="right">
             <h1>Open source</h1>
             <p>Don't like it? Do something about it! We accept pull requests. =)</p>
+            <p><a href="https://github.com/zoomix/ionic_feeder" id="view-on-github"><span>View on GitHub</span></a></p>
+          </div>
+          <div class="right">
+            <h1>Special thanks</h1>
+            <dl>
+              <dt><a href="http://ionicframework.com/">Ionic framework</a></dt>
+              <dd>for an amazing dev env with angular</dd>
+
+              <dt><a href="http://docs.phonegap.com/en/3.4.0/index.html">Cordova / PhoneGap</a></dt>
+              <dd>for the framework to framework on.</dd>
+
+              <dt><a href="http://github.com">Github</a></dt>
+              <dd>for hosting of source and site</dd>
+
+              <dt><a href="http://heroku.com/">Heroku</a></dt>
+              <dd>for providing the backend hosting free och charge (albeit unknowingly =)</dd>
+            </dl>
           </div>
         </section>
 
