New image for sync

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
               <dd>for the framework to framework on.</dd>
 
               <dt><a href="http://github.com">Github</a></dt>
-              <dd>for hosting of source and site</dd>
+              <dd>for free hosting of source and site</dd>
 
               <dt><a href="http://heroku.com/">Heroku</a></dt>
-              <dd>for providing the backend hosting free och charge (albeit unknowingly =)</dd>
+              <dd>for free backend hosting</dd>
             </dl>
           </div>
         </section>
