Small screen stuff

--- a/index.html
+++ b/index.html
@@ -3,18 +3,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-<!--     <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" /> -->
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300|Roboto:300' rel='stylesheet' type='text/css'>
-    
+
     <link rel="stylesheet" type="text/css" href="stylesheets/default.css" />
     <link rel='stylesheet' media='screen and (max-width: 801px)' href='stylesheets/narrow.css' />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <title>Ionic feeder by zoomix</title>
+    <title>Ionic Baby Feeder</title>
   </head>
 
   <body>
@@ -22,35 +15,35 @@
       <div class="inner">
 
         <header>
-          <h1>Ionic baby feeder</h1>
+          <h1>Ionic Baby Feeder</h1>
           <h2>Track your baby's feeding habits.</h2>
           <a class="alpha button" href="http://goo.gl/e5WAkg">Download Alpha here</a>
         </header>
 
         <section id="basics" class="odd">
-          <div class="img"></div>
           <div class="content">
           <h1>Beautifly simple</h1>
-          <p>Ionic baby feeder tracks feedings in style emphesizing what's important - <strong>time since last</strong> feeding and <strong>duration</strong> of ongoing feeding.</p>
+          <p>Ionic Baby Feeder tracks feedings in style emphesizing what's important - <strong>time since last</strong> feeding and <strong>duration</strong> of ongoing feeding.</p>
           <p>Swipe from day to day to see past feedings. Set a buzz to vibrate your phone every 5 minutes to keep track without looking at the phone.</p>
           </div>
+          <div class="img"></div>
         </section>
 
         <section id="sync" class="even">
-          <div class="img"></div>
           <div class="content">
           <h1>Syncs all your devices</h1>
           <p>Use Ionic Baby Feeder on your phone, your tablet, your partner's phone or <strong>any Android device</strong>. They all sync.</p>
           </div>
+          <div class="img"></div>
         </section>
 
         <section id="nobloat" class="odd">
-          <div class="img"></div>
           <div class="content">
 
           <h1>No bloat</h1>
           <p><strong>No fees, no ads, no accounts, no email checks, no nothing.</strong> It's a God damn baby feeding app. Why would we need to know your shoe-size?</p>
           </div>
+          <div class="img"></div>
         </section>
 
 
