Spelling and minor text fixes

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
         <section id="basics" class="odd">
           <div class="content">
-          <h1>Beautifly simple</h1>
-          <p>Ionic Baby Feeder tracks feedings in style emphesizing what's important - <strong>time since last</strong> feeding and <strong>duration</strong> of ongoing feeding.</p>
-          <p>Swipe from day to day to see past feedings. Set a buzz to vibrate your phone every 5 minutes to keep track without looking at the phone.</p>
+          <h1>Beautifully simple</h1>
+          <p>Ionic Baby Feeder tracks feedings in style. It emphasizes what's important - <strong>time since last</strong> feeding, <strong>duration</strong> of ongoing feeding and <strong>volume</strong> of bottle feedings.</p>
+          <p>Swipe from day to day to see past feedings. Set a buzz every 5 minutes to keep track of time without looking.</p>
           </div>
           <div class="img"></div>
         </section>
@@ -41,8 +41,8 @@
         <section id="nobloat" class="odd">
           <div class="content">
 
-          <h1>No bloat</h1>
-          <p><strong>No fees, no ads, no accounts, no email checks, no nothing.</strong> It's a God damn baby feeding app. Why would we need to know your shoe-size?</p>
+          <h1>Private and personal</h1>
+          <p><strong>No fees</strong>, <strong>no ads</strong>, <strong>no accounts</strong>, <strong>no email checks</strong>, <strong>no bloat</strong>, <strong>no nothing</strong>. It's a God damn baby feeding app. Why would we need to know your shoe-size or who your buddy Charlene's hanging out with? Screw that.</p>
           </div>
           <div class="img"></div>
         </section>
@@ -58,16 +58,16 @@
             <h1>Special thanks</h1>
             <dl>
               <dt><a href="http://ionicframework.com/">Ionic framework</a></dt>
-              <dd>for an amazing dev env with angular</dd>
+              <dd>for an amazing dev env with angular.js</dd>
 
               <dt><a href="http://docs.phonegap.com/en/3.4.0/index.html">Cordova / PhoneGap</a></dt>
               <dd>for the framework to framework on.</dd>
 
               <dt><a href="http://github.com">Github</a></dt>
-              <dd>for free hosting of source and site</dd>
+              <dd>for free hosting of source and site.</dd>
 
               <dt><a href="http://heroku.com/">Heroku</a></dt>
-              <dd>for free backend hosting</dd>
+              <dd>for free backend hosting.</dd>
             </dl>
           </div>
         </section>
