--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </section> -->
 
         <footer>
-          Ionic feeder is maintained by <a href="https://github.com/zoomix">zoomix</a><br>
+          Ionic feeder is maintained by <a href="https://github.com/zoomix">zoomix</a>. Copyright and all that bullcrap. &copy;2014.<br>
         </footer>
 
         
