Moved some copy to footer.

--- a/index.html
+++ b/index.html
@@ -40,46 +40,17 @@
 
         <section id="nobloat" class="odd">
           <div class="content">
-
           <h1>Private and personal</h1>
           <p><strong>No fees</strong>, <strong>no ads</strong>, <strong>no accounts</strong>, <strong>no email checks</strong>, <strong>no bloat</strong>, <strong>no nothing</strong>. It's a God damn baby feeding app. Why would we need to know your shoe-size or who your buddy Charlene's hanging out with? Screw that.</p>
           </div>
           <div class="img"></div>
         </section>
 
-
-        <section id="opensource">
-          <div class="left">
-            <h1>Open source</h1>
-            <p>Don't like it? Do something about it! We accept pull requests. =)</p>
-            <p><a href="https://github.com/zoomix/ionic_feeder" id="view-on-github"><span>View on GitHub</span></a></p>
-          </div>
-          <div class="right">
-            <h1>Special thanks</h1>
-            <dl>
-              <dt><a href="http://ionicframework.com/">Ionic framework</a></dt>
-              <dd>for an amazing dev env with angular.js</dd>
-
-              <dt><a href="http://docs.phonegap.com/en/3.4.0/index.html">Cordova / PhoneGap</a></dt>
-              <dd>for the framework to framework on.</dd>
-
-              <dt><a href="http://github.com">Github</a></dt>
-              <dd>for free hosting of source and site.</dd>
-
-              <dt><a href="http://heroku.com/">Heroku</a></dt>
-              <dd>for free backend hosting.</dd>
-            </dl>
-          </div>
-        </section>
-
-<!--         <section id="downloads" class="clearfix">
-          <a href="https://github.com/zoomix/ionic_feeder/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="https://github.com/zoomix/ionic_feeder/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
-          <a href="https://github.com/zoomix/ionic_feeder" id="view-on-github" class="button"><span>View on GitHub</span></a>
-        </section> -->
-
         <footer>
-          Ionic feeder is maintained by <a href="https://github.com/zoomix">zoomix</a>. Copyright and all that bullcrap. &copy;2014.<br>
+          <p>Built using <a href="http://ionicframework.com/">Ionic framework</a>.</p>
+          <p>Ionic feeder is maintained by <a href="https://github.com/zoomix">zoomix</a>. Copyright and all that bullcrap. &copy;2014.</p>
+          <p>Special thanks to <a href="http://docs.phonegap.com/en/3.4.0/index.html">Cordova / PhoneGap</a>, <a href="http://github.com">Github</a></dt> and <a href="http://heroku.com/">Heroku</a>
+          </p>
         </footer>
 
         
