Round images and updated baby image

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
         <section id="basics" class="odd">
           <div class="content">
           <h1>Beautifully simple</h1>
-          <p>Ionic Baby Feeder tracks feedings in style. It emphasizes what's important - <strong>time since last</strong> feeding, <strong>duration</strong> of ongoing feeding and <strong>volume</strong> of bottle feedings.</p>
-          <p>Swipe from day to day to see past feedings. Set a buzz every 5 minutes to keep track of time without looking.</p>
+          <p>Ionic Baby Feeder tracks feedings in style. It emphasizes what's important - <strong>which breast</strong> is in turn, <strong>time since last</strong> feeding and <strong>duration/volume</strong> of current feeding.</p>
           </div>
           <div class="img"></div>
         </section>
