Clarify that it's feedback by email

--- a/www/index.html
+++ b/www/index.html
@@ -82,7 +82,7 @@
           <div class="tools">
             <ion-item ng-click="resyncToday()"    class="noicon">Refresh</ion-item>
             <ion-item ng-click="connectDevices()" class="noicon">Connect devices</ion-item>
-            <ion-item ng-click="feedback()"       class="noicon">Feedback</ion-item>
+            <ion-item ng-click="feedback()"       class="noicon">Feedback (by email)</ion-item>
             <ion-item ng-click="exitApp()"        class="noicon">Exit</ion-item>
           </div>
         </ion-list>
