We're talking breasts and bottles here.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section id="basics" class="odd">
           <div class="content">
           <h1>Beautifully simple</h1>
-          <p>Ionic Baby Feeder tracks feedings in style. It emphasizes what's important - <strong>which breast</strong> is in turn, <strong>time since last</strong> feeding and <strong>duration/volume</strong> of current feeding.</p>
+          <p>Ionic Baby Feeder tracks breast and botte feedings in style. It emphasizes what's important - <strong>which breast</strong> is in turn, <strong>time since last</strong> feeding and <strong>duration/volume</strong> of current feeding.</p>
           </div>
           <div class="img"></div>
         </section>
