--- a/www/list.html
+++ b/www/list.html
@@ -18,8 +18,8 @@
 
       <div class="feeding" ng-click="editFeeding(feeding)" ng-show="feeding.supplier !== 'B'">
         <span class="supplier supplier{{feeding.supplier}}">{{feeding.supplier}}</span>
-        <div class="feedingInfo">{{feeding.startTime | date:'HH:mm'}} - {{endTime(feeding) | date:'HH:mm'}}</div>
-        <div class="feedingInfo duration">{{feeding.duration | date:'m'}} min</div>
+        <div class="feedingInfo">{{feeding.startTime | date:'HH:mm'}}&nbsp;-&nbsp;{{endTime(feeding) | date:'HH:mm'}}</div>
+        <div class="feedingInfo duration">{{feeding.duration | date:'m'}}&nbsp;min</div>
       </div>
    </span>
   </span>
