Max width to look better on tablets and so

--- a/www/connectDevices.html
+++ b/www/connectDevices.html
@@ -2,7 +2,7 @@
   <ion-header-bar>
     <h1 class="title">Connect devices</h1>
   </ion-header-bar>
-  <ion-content>
+  <ion-content class="limitedWidth">
 
     <h2>Add new device</h2>
     <p class="info">Add a device by sharing your private code.<br/>Your private code is <span class="faded">{{userId()}}</span></p>
