--- a/www/index.html
+++ b/www/index.html
@@ -40,10 +40,14 @@
           <img id="infoArrowLeft" src="img/infoArrowLeft.png">
           <img id="infoArrowBottle" src="img/infoArrowBottle.png">
           <img id="infoArrowRight" src="img/infoArrowRight.png">
-          <div id="infoTextLeft">left breast</div>
+<!--           <div id="infoTextLeft">left breast</div>
           <div id="infoTextBottle">bottle</div>
           <div id="infoTextRight">right breast</div>
-          <div id="infoStartFeeding">start feeding</div>
+ -->          <!-- <div id="infoStartFeeding">start feeding</div> -->
+          <img id="infoStartFeeding" src="img/infoStartFeeding.png">
+          <img id="infoTextLeft" src="img/infoTextLeft.png">
+          <img id="infoTextBottle" src="img/infoTextBottle.png">
+          <img id="infoTextRight" src="img/infoTextRight.png">
           <div class="buttonContainer"><button class="button button-round button-info" ng-click="hideInfoOverlay()">Got it. Let me try!</button></div>
         </div>
 
