WIP, dynamic number of days

--- a/www/index.html
+++ b/www/index.html
@@ -49,9 +49,9 @@
         <div class="loadingIndicator" ng-show="loading > 0"><img src="img/499.GIF"></div>
 
         <ion-slide-box on-slide-changed="slideHasChanged($index)" show-pager="false" active-slide="activeSlide">
-          <ion-slide ng-repeat="feedingDay in feedings.slice(0,7) track by $index" class="feedingSlide">
+          <ion-slide ng-repeat="feedingDay in feedingDays.slice(0,feedingDays.length - 1) track by $index" class="feedingSlide">
             <ion-list>
-              <div class="day"><i ng-show="$index > 0 && feedings[$index-1]" class="ion-arrow-left-b"></i> {{feedingDay[0].startTime | date:'EEEE'}} <i class="ion-arrow-right-b"></i> </div>
+              <div class="day"><i ng-show="$index > 0 && feedingDays[$index-1]" class="ion-arrow-left-b"></i> {{feedingDay[0].startTime | date:'EEEE d/M'}} <i class="ion-arrow-right-b"></i> </div>
               <div ng-repeat="feeding in feedingDay"><ng-include src="'list.html'" /></div>
             </ion-list>
           </ion-slide>
@@ -62,7 +62,7 @@
                 <span class="time">{{timeSinceLast}}</span>
                 <p>since last feeding</p>
               </div>
-              <div ng-repeat="feeding in feedings[7]"><ng-include src="'list.html'" /></div>
+              <div ng-repeat="feeding in feedingDays[feedingDays.length-1]"><ng-include src="'list.html'" /></div>
             </ion-list>
           </ion-slide>
         </ion-slide-box>
