Changed link to google play

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
           <h1>Ionic Baby Feeder</h1>
           <h2>Track your baby's feeding habits.</h2>
-          <a class="alpha button" href="http://goo.gl/e5WAkg">Download Alpha here</a>
+          <a class="alpha button" href="https://play.google.com/store/apps/details?id=se.kvrgic.ionicfeeder">Download from Google play</a>
         </header>
 
         <section id="basics" class="odd">
