--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
+    <script src="lib/chartjs/Chart.js"></script>
     <script src="js/config.js"></script>
     <script src="js/protos.js"></script>
     <script src="js/model.js"></script>
@@ -78,6 +79,9 @@
           </div>
         </div>  
 
+        <canvas id="myChart" width="400" height="200"></canvas>
+
+
         <div class="loadingIndicator" ng-show="loading > 0"><img src="img/499.GIF"></div>
 
         <ion-slide-box on-slide-changed="slideHasChanged($index)" show-pager="false" active-slide="activeSlide">
@@ -128,6 +132,38 @@
 
   </ion-side-menus>
 
+
+  <script>
+var ctx = document.getElementById("myChart").getContext("2d");
+// var myNewChart = new Chart(ctx).PolarArea(data);
+var data = {
+    labels: ["January", "February", "March", "April", "May", "June", "July"],
+    datasets: [
+        {
+            label: "My First dataset",
+            fillColor: "rgba(220,220,220,0.2)",
+            strokeColor: "rgba(220,220,220,1)",
+            pointColor: "rgba(220,220,220,1)",
+            pointStrokeColor: "#fff",
+            pointHighlightFill: "#fff",
+            pointHighlightStroke: "rgba(220,220,220,1)",
+            data: [65, 59, 80, 81, 56, 55, 40]
+        },
+        {
+            label: "My Second dataset",
+            fillColor: "rgba(151,187,205,0.2)",
+            strokeColor: "rgba(151,187,205,1)",
+            pointColor: "rgba(151,187,205,1)",
+            pointStrokeColor: "#fff",
+            pointHighlightFill: "#fff",
+            pointHighlightStroke: "rgba(151,187,205,1)",
+            data: [28, 48, 40, 19, 86, 27, 90]
+        }
+    ]
+};
+var options = {}
+var myLineChart = new Chart(ctx).Line(data, options);
+  </script
 
 
   </body>
