--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,7 @@
     <script src="js/protos.js"></script>
     <script src="js/model.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/chartData.js"></script>
   </head>
   <body ng-app="starter">
 
@@ -79,9 +80,6 @@
           </div>
         </div>  
 
-        <canvas id="myChart" width="400" height="200"></canvas>
-
-
         <div class="loadingIndicator" ng-show="loading > 0"><img src="img/499.GIF"></div>
 
         <ion-slide-box on-slide-changed="slideHasChanged($index)" show-pager="false" active-slide="activeSlide">
@@ -116,13 +114,14 @@
         <ion-list>
           <div class="version">&copy; Ionic Baby Feeder v{{version}}</div>
           <div class="settings">
-            <!-- <ion-item ng-click="toggleDemoMode()" class="item item-icon-right">Demo mode<i ng-show="demoModeOn" class="icon ion-toggle-filled"></i><i ng-show="!demoModeOn" class="icon ion-toggle"></i></ion-item> -->
+            <ion-item ng-click="toggleDemoMode()" class="item item-icon-right">Demo mode<i ng-show="demoModeOn" class="icon ion-toggle-filled"></i><i ng-show="!demoModeOn" class="icon ion-toggle"></i></ion-item>
             <ion-item ng-click="toggleVibrate()"  class="item item-icon-right">Buzz every 5 min<i ng-show="vibrateOn" class="icon ion-toggle-filled"></i><i ng-show="!vibrateOn" class="icon ion-toggle"></i></ion-item>
           </div>
 
           <div class="tools">
             <ion-item ng-click="resyncToday()"    class="noicon">Refresh</ion-item>
             <ion-item ng-click="connectDevices()" class="noicon">Connect devices</ion-item>
+            <ion-item ng-click="enterCharts()"    class="noicon">Charts</ion-item>
             <ion-item ng-click="feedback()"       class="noicon">Email us feedback</ion-item>
             <ion-item ng-click="exitApp()"        class="noicon">Exit</ion-item>
           </div>
@@ -131,40 +130,6 @@
     </ion-side-menu>
 
   </ion-side-menus>
-
-
-  <script>
-var ctx = document.getElementById("myChart").getContext("2d");
-// var myNewChart = new Chart(ctx).PolarArea(data);
-var data = {
-    labels: ["January", "February", "March", "April", "May", "June", "July"],
-    datasets: [
-        {
-            label: "My First dataset",
-            fillColor: "rgba(220,220,220,0.2)",
-            strokeColor: "rgba(220,220,220,1)",
-            pointColor: "rgba(220,220,220,1)",
-            pointStrokeColor: "#fff",
-            pointHighlightFill: "#fff",
-            pointHighlightStroke: "rgba(220,220,220,1)",
-            data: [65, 59, 80, 81, 56, 55, 40]
-        },
-        {
-            label: "My Second dataset",
-            fillColor: "rgba(151,187,205,0.2)",
-            strokeColor: "rgba(151,187,205,1)",
-            pointColor: "rgba(151,187,205,1)",
-            pointStrokeColor: "#fff",
-            pointHighlightFill: "#fff",
-            pointHighlightStroke: "rgba(151,187,205,1)",
-            data: [28, 48, 40, 19, 86, 27, 90]
-        }
-    ]
-};
-var options = {}
-var myLineChart = new Chart(ctx).Line(data, options);
-  </script
-
 
   </body>
 </html>
