--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
     <script src="js/config.js"></script>
     <script src="js/protos.js"></script>
     <script src="js/model.js"></script>
+    <script src="js/chartsController.js"></script>
     <script src="js/app.js"></script>
     <script src="js/chartData.js"></script>
   </head>
